import carteAnimal.*;
import gameplay.jeu.*;
import obstacles.Sapin;
import typeCarte.*;

import java.util.ArrayList;

public class Main
{
    public static void main(String[] args) {
        Partie partie = new Partie();

        partie.demarrerPartieSansObstacle();
    }
}
