package carteAnimal;

import typeCarte.Animal;

public class Louveteau extends Animal {
    public Louveteau(){
        super("Louveteau", 1, 1, 1, 0, false);
    }
}
