package carteAnimal;

import typeCarte.Animal;

public class Moineau extends Animal {
    public Moineau(){
        super("Moineau", 1, 2, 1, 0, true);
    }
}
