package obstacles;


import typeCarte.Obstacle;

public class Roche extends Obstacle {
    public Roche (){
        super(5,"rocher");
    }


}
